<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:windowSoftInputMode="stateHidden"
    android:focusable="true"
    android:focusableInTouchMode="true"

    tools:context=".register.controllers.activities.RegisterActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <EditText
                android:id="@+id/editText_email_register"
                style="@style/EditTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/email_register"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />


            <EditText
                android:id="@+id/editText_username_register"
                style="@style/EditTextTheme"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/username_register"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/editText_email_register"
                app:layout_constraintStart_toStartOf="@+id/editText_email_register"
                app:layout_constraintTop_toBottomOf="@+id/editText_email_register" />

            <EditText
                android:id="@+id/editText_password_register"
                style="@style/EditTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/password_register"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/editText_username_register"
                app:layout_constraintStart_toStartOf="@+id/editText_username_register"
                app:layout_constraintTop_toBottomOf="@+id/editText_username_register" />

            <EditText
                android:id="@+id/editText_password_register_repeat"
                style="@style/EditTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/password_register_repeat"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/editText_password_register"
                app:layout_constraintStart_toStartOf="@+id/editText_password_register"
                app:layout_constraintTop_toBottomOf="@+id/editText_password_register" />


            <Spinner
                android:id="@+id/spinner_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/editText_password_register_repeat"
                app:layout_constraintStart_toStartOf="@+id/editText_password_register_repeat"
                app:layout_constraintTop_toBottomOf="@+id/editText_password_register_repeat" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_shape_btn"
                android:text="@string/register_login"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/spinner_age"
                app:layout_constraintStart_toStartOf="@+id/spinner_age"
                app:layout_constraintTop_toBottomOf="@+id/spinner_age" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>